--- a/main.css
+++ b/main.css
@@ -90,34 +90,26 @@ html, body {
   align-self: center;
 }
 
-.text-area2{
-  background: #099bca;
-  height: 300px;
-  color: #484848;
-  margin: 20px 2% 0px 2%;
-  text-align: left;
-  border: 1px solid #c1c1c1;
-  padding-left: 30px;
-}
-
-.text-area2.hide{
+.hide{
   display: none;
 }
 
-.bullet-points li{
-  font-size: 18px;
-  list-style-type: square;
-  // padding-top: 10px;
-  line-height: 20px;
+.table{
+  padding: 40px;
+  text-align: center;
+  margin: auto;
 }
 
-.bullet-points li:nth-child(odd){
-  color: white;
+.table-text-header{
+  font-size: 20px;
 }
 
-.bullet-points li:nth-child(even){
-  color: black;
-  margin-bottom: 30px;
+.table-text-col{
+  color: #1d9cc8;
+}
+
+.empty-cell {
+  background-color: gray;
 }
 
 /* Footer */
